# rust-practice

./: .envrc  .gitignore  Cargo.toml  rename_tutorial.py  rust-analyzer.vsix  template_esb.json
01_guessing_game/src/: main  main.rs
01a_guessing_game/: Cargo.toml
01a_guessing_game/src/: main.rs
02_stack_heap/src/: main.rs
03_ownership/src/: main.rs
04_slices/src/: main.rs
05_control_flow/: Cargo.toml
05_control_flow/src/: main.rs
06_str_string/: Cargo.toml
06_str_string/src/: main.rs
07_structure/src/: main.rs
08_enum_example/: Cargo.toml
08_enum_example/src/: main.rs
09_modules/src/: back_of_house.rs  lib.rs  main.rs
09_modules/src/back_of_house/: serving.rs
10_vectors/src/: main.rs
11_hash_map/: Cargo.toml
11_hash_map/src/: main.rs
12_error_handling/: hello.txt
12_error_handling/src/: main.rs
13_generics/src/: aggregator.rs  lib.rs  main.rs
13_generics/src/aggregator/: tweet.rs
14_traits/src/: main.rs
15_lifetimes/src/: main.rs
16_writing_tests/src/: lib.rs
16_writing_tests/tests/: integration_tests.rs
16_writing_tests/tests/common/: mod.rs
17_minigrep/: output.txt  poem.txt
17_minigrep/src/: lib.rs  main.rs
18_closure/src/: main.rs
19_iterators/src/: lib.rs  main.rs
20_smart_pointers/src/: main.rs
guessing_game/src/: main.rs
guessing_game2/src/: main.rs
practice_tests/: Cargo.toml
practice_tests/src/: main.rs
